vlib/v/checker/tests/assign_immutable_reference_call_result_err.out
vlib/v/checker/tests/assign_immutable_reference_call_result_err.vv:17:16: notice: `ja` is immutable, cannot have a mutable reference to an immutable object
   15 |         name: 'foo'
   16 |     }
   17 |     mut x := rere(ja)
      |                   ~~
   18 |     x.name = 'bar'
   19 | }
vlib/v/checker/tests/assign_immutable_reference_call_result_err.vv:18:4: error: `x.name` aliases mutable data from an immutable value
   16 |     }
   17 |     mut x := rere(ja)
   18 |     x.name = 'bar'
      |       ~~~~
   19 | }
